# chess

./: .clang-format  .clangd  .gitignore  Makefile  README.md  meson.build
inc/: engine.h  game.h  rendering.h  ui.h
include/: board.h  engine.h  fen.h  game_state.h  history.h  match.h  move.h  movegen.h  movelist.h  position.h  rules.h  turn_moves.h  types.h  ui.h
include/utils/: array.h  array_tpl.h  log.h
src/: bitboards.c  bitboards.h  bits.c  bits.h  board.c  board.h  engine.c  fen.c  fen.h  game.c  game_state.c  main.c  makemove.c  makemove.h  match.c  meson.build  move.c  movegen.c  movegen.h  movelist.c  movelist.h  perft.c  position.c  rendering.c  rules.c  turn_moves.c  types.h  ui.c  utils.c  utils.h
src/common/: array.c  array.h  circbuf.h  log.c  log.h  meson.build  vector.h
src/ds/: container_of.h  list.h
src/engine/: bitboards.c  bitboards.h  bits.c  bits.h  board.c  board.h  engine.c  engine.h  engine_mq.c  engine_mq.h  engine_types.h  enginegui.c  eval.c  eval.h  fen.c  fen.h  hash.c  hash.h  makemove.c  makemove.h  meson.build  move.c  movegen.c  movegen.h  movelist.c  movelist.h  msg_queue.c  msg_queue.h  perft.c  search.c  search.h  search_types.h  transposition.c  transposition.h  uci.c  uci.h  uci_types.h  utils.c  utils.h
src/include/: engine.h  enginegui.h  types.h
src/ui/: meson.build  ui.c
src/utils/: array.c  log.c  meson.build
tests/: board_test.c  fen_test.c  game_state_test.c  hash_test.c  makemove_test.c  match_test.c  meson.build  move_test.c  movegen_test.c  rules_test.c
tests/common/: circbuf_test.c  meson.build
tests/ds/: list_test.c  meson.build
tests/utils/: array_test.c  array_tpl_test.c
